test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/enum.widl
enum foo { 1, 2, 3};